<resources>
    <string name="app_name">Currency Exchange</string>
    <string name="last_updated">Last Updated:</string>
    <string name="base_currency">AUD: 1.00</string>
    <string name="ndz">NDZ:</string>
    <string name="usd">USD:</string>
    <string name="gbp">GBP:</string>
    <string name="eur">EUR:</string>
    <string name="cad">CAD:</string>
    <string name="mxn">MXN:</string>
</resources>