<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    // LAST UPDATED
    <TextView
        android:id="@+id/lastUpdated"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/last_updated"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    // CURRENCY VALUE IN AUSTRALIA
    <TextView
        android:id="@+id/baseCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_currency"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/lastUpdated" />

    // NEW ZEALAND CURRENCY VALUE
    <TextView
        android:id="@+id/nzd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ndz"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/baseCurrency" />

    // UNITED STATES CURRENCY VALUE
    <TextView
        android:id="@+id/usd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/usd"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nzd" />

    // GREAT BRITAIN CURRENCY VALUE
    <TextView
        android:id="@+id/gbp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gbp"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/usd" />

    // EUROPE CURRENCY VALUE
    <TextView
        android:id="@+id/eur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eur"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gbp" />

    // CANADA CURRENCY VALUE
    <TextView
        android:id="@+id/cad"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cad"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/eur" />

    // MEXICO CURRENCY VALUE
    <TextView
        android:id="@+id/mxn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/mxn"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:layout_marginTop="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cad" />

</androidx.constraintlayout.widget.ConstraintLayout>